- FEATURE: charging mode (when connect power to turned off watches, show battery icon + % bar instead of fully start)
- FEATURE: "Cassete futurism" clock face
- FEATURE: "Knight Rider speaker" clock face
- REFACTOR: display adjust is now set in percentage (1 - 100) (and stored in resgistry after shutdown)

cyberWatch 0.4
========================
- FEATURE: set mainscreen to datetime app after power on / wakeup (touch)
- FEATURE: wakeup to locked screen, unlock by PEKshort
- FEATURE: system event subsystem
- FEATURE: when display always on - and inactivity conditions are true, set to default screen and lock ui
- FEATURE: when display always on - detect if watch are off hand (and no moving e.g. on table) - goes sleep to prevent energy consumption when not on hand
- FEATURE: "about screen" with version, commit hash and date and time of compilation
- FEATURE: "about screen" also contains uptime and time unplugged from power

cyberWatch 0.3
========================
- FEATURE: system ticker + do some operations only every Xth tick (battery savings)
- REFACTORING: rename System to Core package and create Hardware subpackage
- BUGIFX: milliseconds instead of microseconds in sleep method

cyberWatch 0.2
========================
 - FEATURE: partially support for TTGO Watch V2 (motor operation only if LILYGO_WATCH_HAS_MOTOR)
 - FEATURE: synchronize date & time with computer during compile/upload
 - FEATURE: screen for settings (with touch control - on/off display on, on/off tilt activation, on/off vibrations)
 - REFACTORING: settings class for alwaysOn feature (instead alwaysOn boolean on DateTime component)
 - REDESIGN: remove turning on "display always on" by PEKShort on date now controlling from PanelSettings app
 - BUGFIX: avoid blinking when swipe to stopwatch screen

cyberWatch 0.1
========================
 - shows splashscreen
 - shows "exit screen"
 - shows current time & date (include day of week)
 - or multiple other watch faces