@@ -14,6 +14,8 @@ class AnalogClocks : public MainComponent {
 
 	protected:
 
+		uint8_t prevSecond = 99;
+
 		void drawLine(int32_t time, uint8_t radius, uint32_t color);
 		void clear();
 		void renderFace();
