@@ -14,6 +14,8 @@ class Planetoid : public MainComponent {
 
 	protected:
 
+		uint8_t prevSecond = 99;
+
 		void clear();
 		void renderFace();
 		void renderPoint(uint16_t angle, uint8_t radius, uint8_t size, int color);
